# vc-core

./: Cargo.toml  README.md
crates/vc_ecs/: Cargo.toml
crates/vc_ecs/derive/: Cargo.toml
crates/vc_ecs/derive/src/: component.rs  event.rs  lib.rs  message.rs  query_data.rs  query_filter.rs  utils.rs
crates/vc_ecs/derive/src/impls/: mod.rs  resource.rs
crates/vc_ecs/derive/src/path/: fp.rs  mod.rs
crates/vc_ecs/src/: batching.rs  change_detection.rs  intern.rs  label.rs  lib.rs  name.rs  resource.rs  tick.rs
crates/vc_ecs/src/archetype/: archetype.rs  archetypes.rs  bundle.rs  entity.rs  flags.rs  id.rs  mod.rs
crates/vc_ecs/src/bundle/: bundle.rs  id.rs  info.rs  mod.rs  status.rs
crates/vc_ecs/src/component/: borrow.rs  clone.rs  components.rs  id.rs  info.rs  mod.rs  mutable.rs  register.rs  required.rs  tick.rs
crates/vc_ecs/src/entity/: allocator.rs  clone.rs  entities.rs  entity.rs  error.rs  id.rs  location.rs  mod.rs
crates/vc_ecs/src/entity/utils/: entity_set.rs  equivalent.rs  hash.rs  map_entities.rs  mod.rs  unique_array.rs  unique_iter.rs  unique_slice.rs  unique_vec.rs
crates/vc_ecs/src/event/: mod.rs
crates/vc_ecs/src/lifecycle/: event.rs  hook.rs  mod.rs
crates/vc_ecs/src/reflect/: mod.rs
crates/vc_ecs/src/relationship/: accessor.rs  mod.rs
crates/vc_ecs/src/storage/: index.rs  mod.rs
crates/vc_ecs/src/storage/resource/: data.rs  mod.rs  resources.rs
crates/vc_ecs/src/storage/sparse/: index.rs  map.rs  mod.rs  set.rs  sets.rs  sparse_component.rs
crates/vc_ecs/src/storage/table/: id.rs  mod.rs  table.rs  tables.rs
crates/vc_ecs/src/storage/utils/: abort_on_drop.rs  blob_array.rs  column.rs  mod.rs  thin_array.rs  vec_extension.rs
crates/vc_ecs/src/utils/: debug_location.rs  debug_name.rs  debug_unwrap.rs
crates/vc_ecs/src/world/: deferred.rs  id.rs  mod.rs  world.rs  world_cell.rs
crates/vc_os/: Cargo.toml  README.md
crates/vc_os/src/: lib.rs
crates/vc_os/src/sync/: atomic.rs  mod.rs  once_flag.rs
crates/vc_os/src/thread/: fallback.rs  mod.rs
crates/vc_os/src/time/: fallback.rs  mod.rs
crates/vc_os/src/utils/: list_queue.rs  mod.rs  parallel.rs
crates/vc_reflect/: Cargo.toml
crates/vc_reflect/derive/: Cargo.toml
crates/vc_reflect/derive/src/: lib.rs
crates/vc_reflect/derive/src/derive_data/: define_parser.rs  mod.rs  reflect_derive.rs  reflect_enum.rs  reflect_meta.rs  reflect_struct.rs  reflect_type_parser.rs
crates/vc_reflect/derive/src/impls/: auto_register.rs  common_imps.rs  enum_kind.rs  impl_auto_register.rs  impl_enum.rs  impl_opaque.rs  impl_reflect_trait.rs  impl_struct.rs  impl_struct_clone.rs  impl_struct_from_reflect.rs  impl_trait_get_type_meta.rs  impl_trait_type_path.rs  impl_trait_typed.rs  impl_tuple_struct.rs  impl_unit.rs  match_reflect_impls.rs  mod.rs  opaque_kind.rs  opaque_trait.rs  struct_clone.rs  struct_from_reflect.rs  struct_kind.rs  trait_get_type_meta.rs  trait_reflect.rs  tuple_struct_kind.rs  unit_kind.rs
crates/vc_reflect/derive/src/path/: cell.rs  info.rs  mod.rs  ops.rs  registry.rs
crates/vc_reflect/derive/src/utils/: string_expr.rs
crates/vc_reflect/src/: __macro_exports.rs  lib.rs
crates/vc_reflect/src/access/: accessor.rs  mod.rs  path.rs  path_access.rs  string_parser.rs
crates/vc_reflect/src/impls/: cell.rs  mod.rs
crates/vc_reflect/src/impls/alloc/: binary_heap.rs  borrow.rs  btree_map.rs  btree_set.rs  mod.rs  vec.rs  vec_deque.rs
crates/vc_reflect/src/impls/core/: any.rs  atomic.rs  mod.rs  net.rs  num.rs  panic.rs
crates/vc_reflect/src/impls/native/: native_array.rs  native_basic.rs  native_ref.rs  native_str.rs  native_tuple.rs
crates/vc_reflect/src/impls/utils/: common.rs  hash_map.rs  hash_set.rs  mod.rs  simple_type.rs
crates/vc_reflect/src/impls/vc_os/: time.rs
crates/vc_reflect/src/impls/vc_utils/: fastvec.rs  hash.rs  index.rs  mod.rs
crates/vc_reflect/src/info/: array_info.rs  attributes.rs  const_param_data.rs  docs_macro.rs  enum_info.rs  field_info.rs  generics.rs  list_info.rs  map_info.rs  mod.rs  opaque_info.rs  set_info.rs  struct_info.rs  tuple_info.rs  tuple_struct_info.rs  type_info.rs  type_path.rs  typed.rs  variant_info.rs
crates/vc_reflect/src/ops/: apply_error.rs  array_ops.rs  clone_error.rs  enum_ops.rs  kind.rs  list_ops.rs  map_ops.rs  mod.rs  set_ops.rs  struct_ops.rs  tuple_ops.rs  tuple_struct_ops.rs  variant_ops.rs
crates/vc_reflect/src/reflection/: from_reflect.rs  mod.rs  reflect.rs
crates/vc_reflect/src/registry/: from_type.rs  mod.rs  type_meta.rs  type_registry.rs  type_trait.rs
crates/vc_reflect/src/registry/traits/: default.rs  deserialize.rs  from_ptr.rs  serialize.rs  (+1 more)
crates/vc_utils/: Cargo.toml  README.md
crates/vc_utils/src/: default.rs  lib.rs  range_invoke.rs  typeid_map.rs  unsafe_deref.rs  vec.rs
crates/vc_utils/src/collections/: array_deque.rs  block_list.rs  mod.rs
crates/vc_utils/src/extra/: array_deque.rs  block_list.rs  mod.rs  page_pool.rs  short_name.rs  typeid_map.rs
crates/vc_utils/src/hash/: hash_map.rs  hash_set.rs  hasher.rs  mod.rs  pre_hashed.rs
crates/vc_utils/src/index/: mod.rs
(+40 files in other folders)
