[package]
name = "vc_reflect"
version = "0.0.1"
edition = "2024"

[features]
default = [ "std", "auto_register" ]

std = [
    "vc_cfg/std",
    "vc_utils/std",
    "vc_os/std",
    "serde/std",
    "erased-serde/std",
]

reflect_docs = [ "vc_reflect_derive/reflect_docs" ]

auto_register = [ "dep:inventory", "vc_reflect_derive/auto_register" ]

[dependencies]
vc_reflect_derive = { path = "derive" }
vc_ptr = { path = "../vc_ptr" }
vc_cfg = { path = "../vc_cfg", default-features = false }
vc_utils = { path = "../vc_utils", default-features = false }
vc_os = { path = "../vc_os", default-features = false }

# auto_register
inventory = { version = "0.3", optional = true }

# reflect serde
serde = { version = "1", default-features = false, features = ["alloc"] }
erased-serde = { version = "0.4", default-features = false, features = ["alloc"] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
